01-kubeinvaders/aliens-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aliens
  labels:
    app: aliens
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: aliens
