01-kubeinvaders/kubeinvaders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeinvaders
  labels:
    app: kubeinvaders
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: kubeinvaders
