01-kubeinvaders/aliens-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aliens
  labels:
    app: aliens
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: aliens.mickael.calpeabyla.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aliens
            port:
              number: 8080
