01-kubeinvaders/kubeinvaders-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeinvaders
  labels:
    app: kubeinvaders
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: kubeinvaders.mickael.calpeabyla.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeinvaders
            port:
              number: 8080
